search+firestore added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: 
   get: ^4.6.5
   fluttertoast: ^8.1.2
+  cloud_firestore: 
 
 dev_dependencies:
   flutter_test:
