--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 
-  google_fonts: 
-  path_provider: 
+  google_fonts:  
   firebase_auth: 
   firebase_core: 
   google_sign_in: 
-  get: ^4.6.5
-  fluttertoast: ^8.1.2
+  get: 
+  fluttertoast: 
   cloud_firestore: 
 
 dev_dependencies:
