--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 
-  google_fonts:  
-  firebase_auth: 
-  firebase_core: 
-  google_sign_in: 
-  get: 
-  fluttertoast: 
-  cloud_firestore: 
-  firebase_storage: ^11.0.11
-  image_picker: ^0.8.6+1
+  cupertino_icons: 1.0.5
+  google_fonts:  4.0.3
+  firebase_auth: 4.2.6 
+  firebase_core: 2.5.0
+  google_sign_in: 5.4.4
+  get: 4.6.5
+  fluttertoast: 8.1.2
+  cloud_firestore: 4.3.2
+  firebase_storage: 11.0.11
+  image_picker: 0.8.6+1
   
 
 dev_dependencies:
