--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: 4.3.2
   firebase_storage: 11.0.11
   image_picker: 0.8.6+1
+  cached_network_image: ^3.2.3
   
 
 dev_dependencies:
