--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_storage: 11.0.11
   image_picker: 0.8.6+1
   cached_network_image: ^3.2.3
+  form_field_validator: ^1.1.0
+  
   
 
 dev_dependencies:
